--- a/templates/administration/index.html.twig
+++ b/templates/administration/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello TestController!{% endblock %}
+{% block title %}{% endblock %}
 
 {% block body %}
 <style>
