--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -2,8 +2,8 @@
   <nav>
       <ul>
           <li><a href="{{ path('test') }}">Accueil</a></li>
-          <li><a href="{{ path('liste-locataire') }}">Produits</a></li>
-          <li><a href="{{ path('liste-locataire') }}">Contact</a></li>
+          <li><a href="{{ path('liste-locataire') }}">Locataires</a></li>
+          <li><a href="{{ path('liste-appartement') }}">Appartement</a></li>
       </ul>
   </nav>
 </header>
