--- a/templates/administration/liste-appartement.html.twig
+++ b/templates/administration/liste-appartement.html.twig
@@ -1,49 +1,241 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste Locataires{% endblock %}
+{% block title %}Liste Locataires
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: red; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 1200px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: red;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1> Liste appartements</h1>
+	
 
-    
-    <table class="table">
-        <thead>
-            <tr>
-            <th scope="col">#</th>
-            <th scope="col">adresse</th>
-            <th scope="col">complement</th>
-            <th scope="col">Ville</th>
-            <th scope="col">code postale</th>
-            <th scope="col">loyer</th>
-            <th scope="col">charges</th>
-            </tr>
-        </thead>
-        <tbody>
-          {% for ap in appartements %}
-          <tr>
-            <td>{{ ap.id }}</td>
-            <td>{{ ap.adresse }}</td>
-            <td>{{ ap.complement }}</td>
-            <td>{{ ap.ville }}</td>
-            <td>{{ ap.codepostal }}</td>
-            <td>{{ ap.loyer }}</td>
-            <td>{{ ap.charges }}</td>
-          
-          </tr>
-        {% endfor %}
-           
-        </tbody>
-    </table>
-    
 
-     <ul>
-      
-    </ul>
-</div>
+	<div class="container">
+
+        <div class="mt-5 mb-5 ">
+                <h1>
+                    Liste appartements
+                </h1>
+                <a href="{{ path('ajout-appartement') }}" class="btn btn-success">
+                    Ajouter un Appartement
+                </a>
+                <div class="row mt-3 text-center " >
+                    <div class="light-green col">Appartement disponible</div>
+                    <div class="light-orange col">Appartement avec un dossier en cours</div>
+                    <div class="light-red col">Appartement occupé</div>
+                </div>
+
+
+        </div>
+
+
+		<div class="row" data-toggle="dragula" data-dragula-containers='["#cards-moves-left", "#cards-moves-right"]' data-dragula-moves="js-dragula-handle">
+			<div class="col-md">
+
+
+				<div class="card shadow-lg  mb-5 bg-body">
+					<div class="card-header">
+						<div class="card-body media align-items-center text-center row">
+
+							<div class="col mr-3 nameSearch">
+								<h6>#</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Adresse</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Ville / Code postal</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Loyer /mois</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Charges /mois</h6>
+							</div>
+
+							<div class="col mr-3"></div>
+
+
+							<div class="media-right ml-3"></div>
+						</div>
+					</div>
+					<div class="card-body">
+
+						{% for ap in appartements %}
+							{% if ap.etat == 0 or ap.etat == null  %}
+								<div class="card-list light-green">
+
+
+									<div class="card-body">
+										<div class=" media align-items-center text-center row">
+
+											<div class="col mr-3 nameSearch">
+												<p>{{ap.id}}</p>
+											</div>
+											<div class="col mr-3">
+
+												<p>{{ap.adresse}}
+													{{ap.complement}}
+												</p>
+
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.ville}}
+													{{ap.codepostal}}</p>
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.loyer}}</p>
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.charges}}</p>
+											</div>
+
+											<div class="col mr-3">
+												<a href="fiche-appartement/{{ap.id}}">
+													<i class="fas fa-circle-info"></i>
+												</a>
+												|
+												<a href="modifier-appartement/{{ap.id}}">
+													<i class="fas fa-pen"></i>
+												</a>
+												|
+												<a href="delete-appartement/{{ap.id}}">
+													<i class="fas fa-trash"></i>
+												</a>
+
+
+											</div>
+
+
+										</div>
+									</div>
+
+
+								</div>
+
+							{% elseif ap.etat == 1  %}
+								<div class="card-list light-orange">
+
+
+									<div class="card-body">
+										<div class=" media align-items-center text-center row">
+
+											<div class="col mr-3 nameSearch">
+												<p>{{ap.id}}</p>
+											</div>
+											<div class="col mr-3">
+
+												<p>{{ap.adresse}}
+													{{ap.complement}}
+												</p>
+
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.ville}}
+													{{ap.codepostal}}</p>
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.loyer}}</p>
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.charges}}</p>
+											</div>
+
+											<div class="col mr-3">
+												<a href="fiche-appartement/{{ap.id}}">
+													<i class="fas fa-circle-info"></i>
+												</a>
+												|
+												<a href="modifier-appartement/{{ap.id}}">
+													<i class="fas fa-pen"></i>
+												</a>
+												|
+												<a href="delete-appartement/{{ap.id}}">
+													<i class="fas fa-trash"></i>
+												</a>
+
+
+											</div>
+
+
+										</div>
+									</div>
+
+
+								</div>
+
+							{% elseif ap.etat == 2 %}
+								<div class="card-list light-red">
+
+
+									<div class="card-body">
+										<div class=" media align-items-center text-center row">
+
+											<div class="col mr-3 nameSearch">
+												<p>{{ap.id}}</p>
+											</div>
+											<div class="col mr-3">
+
+												<p>{{ap.adresse}}
+													{{ap.complement}}
+												</p>
+
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.ville}}
+													{{ap.codepostal}}</p>
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.loyer}}</p>
+											</div>
+											<div class="col mr-3">
+												<p>{{ap.charges}}</p>
+											</div>
+
+											<div class="col mr-3">
+												<a href="fiche-appartement/{{ap.id}}">
+													<i class="fas fa-circle-info"></i>
+												</a>
+												|
+												<a href="modifier-appartement/{{ap.id}}">
+													<i class="fas fa-pen"></i>
+												</a>
+												|
+												<a href="delete-appartement/{{ap.id}}">
+													<i class="fas fa-trash"></i>
+												</a>
+
+
+											</div>
+
+
+										</div>
+									</div>
+
+
+								</div>
+
+							{% endif %}
+
+
+						{% endfor %}
+
+
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
 {% endblock %}
