--- a/templates/administration/liste-locataire.html.twig
+++ b/templates/administration/liste-locataire.html.twig
@@ -1,47 +1,129 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste Locataires{% endblock %}
+{% block title %}Liste Locataires
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: red; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: red;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1> Liste Loc✅</h1>
+	<div class="container">
 
-    
-    <table class="table">
-        <thead>
-            <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nom</th>
-            <th scope="col">Prénom</th>
-            <th scope="col">Mail</th>
-            <th scope="col">Téléphone</th>
-            <th scope="col">Adresse</th>
-            </tr>
-        </thead>
-        <tbody>
-          {% for loc in locataires %}
-          <tr>
-            <td>{{ loc.id }}</td>
-            <td>{{ loc.nom }}</td>
-            <td>{{ loc.prenom }}</td>
-            <td>{{ loc.mail }}</td>
-            <td>{{ loc.tel }}</td>
-            <td>{{ loc.adresse }}</td>
-          
-          </tr>
-        {% endfor %}
-           
-        </tbody>
-    </table>
-    
+		<div class="mt-5 mb-5 ">
+			<h1>
+				Liste Locataires
+			</h1>
+			<a href="{{ path('ajout-locataire') }}" class="btn btn-success">
+				Ajouter un Locataire
+			</a>
 
-     <ul>
-      
-    </ul>
-</div>
+
+		</div>
+
+
+		<div class="row" data-toggle="dragula" data-dragula-containers='["#cards-moves-left", "#cards-moves-right"]' data-dragula-moves="js-dragula-handle">
+			<div class="col-md">
+
+
+				<div class="card shadow-lg  mb-5 bg-body">
+					<div class="card-header">
+						<div class="card-body media align-items-center text-center row">
+
+							<div class="col mr-3 nameSearch">
+								<h6>#</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Nom</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Prénom</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Email</h6>
+							</div>
+							<div class="col mr-3">
+								<h6>Téléphone</h6>
+							</div>
+
+							<div class="col mr-3"></div>
+
+
+							<div class="media-right ml-3"></div>
+						</div>
+					</div>
+					<div class="card-body">
+
+						{% for loc in locataires %}
+							<div class="card-list ">
+
+
+								<div class="card-body">
+									<div class=" media align-items-center text-center row">
+
+										<div class="col mr-3 nameSearch">
+											<p>{{loc.id}}</p>
+										</div>
+										<div class="col mr-3">
+
+											<p>
+												{{loc.nom}}
+											</p>
+
+										</div>
+										<div class="col mr-3">
+											<p>
+												{{loc.prenom}}
+											</p>
+										</div>
+										<div class="col mr-3">
+											<p>{{loc.mail}}</p>
+										</div>
+										<div class="col mr-3">
+											<p>{{loc.tel}}</p>
+										</div>
+
+										<div class="col mr-3">
+											<a href="fiche-locataire/{{loc.id}}">
+												<i class="fas fa-circle-info"></i>
+											</a>
+											|
+											<a href="modifier-locataire/{{loc.id}}">
+												<i class="fas fa-pen"></i>
+											</a>
+											|
+											<a href="delete-locataire/{{loc.id}}">
+												<i class="fas fa-trash"></i>
+											</a>
+
+
+										</div>
+
+
+									</div>
+								</div>
+
+
+							</div>
+
+
+						{% endfor %}
+
+
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
 {% endblock %}
