Generation quittance de loyer + envois de mail

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,5 +43,14 @@ nav a:hover {
     font-weight: bold;
 }
 
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    color: black;
+    font-weight: bold;
+}
+
 
 
