--- a/templates/administration/fiche-appartement.html.twig
+++ b/templates/administration/fiche-appartement.html.twig
@@ -26,7 +26,7 @@
 				Fiche Appartement
 			</h1>
 
-			<a href="reinitAppart">Vider l'appartement</a>
+			<a href="/reinit-appartement/{{appartement.id}}">Vider l'appartement</a>
 
 
 		</div>
