--- a/templates/administration/ajout-appartement.html.twig
+++ b/templates/administration/ajout-appartement.html.twig
@@ -1,31 +1,72 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste Locataires{% endblock %}
+{% block title %}Liste Locataires
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: red; padding: 2px 6px; }
-</style>
+	<style>
+		.example-wrapper {
+			margin: 1em auto;
+			max-width: 800px;
+			width: 95%;
+			font: 18px / 1.5 sans-serif;
+		}
+		.example-wrapper code {
+			background: red;
+			padding: 2px 6px;
+		}
+	</style>
 
-<div class="example-wrapper">
-    <h1> ajout appartements</h1>
+	<div class="container">
 
-    
-   
- 
 
-  <form method="post">
-    {{ form_row(form.adresse) }}
-    {{ form_row(form.complement) }}
-    {{ form_row(form.ville) }}
-    {{ form_row(form.code_postal) }}
-    {{ form_row(form.loyer) }}
-    {{ form_row(form.charges) }}    
-    {{ form_rest(form) }}
-    <button type="submit">Ajouter</button>
-</form>
-    
+		<div class="card shadow-lg  mb-5 bg-body mt-5">
+			<div class="card-header">
 
-</div>
-{% endblock %}
+				<h1>
+					Ajout Appartement</h1>
+
+
+			</div>
+			<div class="card-body media align-items-center  row p-5">
+
+
+				<form method="post" class="mt-3 row  g-3">
+
+					<div class="col-6">
+						{{ form_label(form.adresse) }}
+						{{ form_widget(form.adresse, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.adresse) }}
+
+					</div>
+
+					<div class="col-6">
+						{{ form_label(form.complement) }}
+						{{ form_widget(form.complement, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.complement) }}</div>
+					<div class="col-6">{{ form_label(form.ville) }}
+						{{ form_widget(form.ville, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.ville) }}</div>
+					<div class="col-6">
+						{{ form_label(form.code_postal) }}
+						{{ form_widget(form.code_postal, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.code_postal) }}</div>
+					<div class="col-6">
+						{{ form_label(form.loyer) }}
+						{{ form_widget(form.loyer, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.loyer) }}</div>
+					<div class="col-6">
+						{{ form_label(form.charges) }}
+						{{ form_widget(form.charges, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.charges) }}</div>
+					<div class="col-6"></div>
+
+
+					{{ form_rest(form) }}
+
+					<button type="submit" class="btn btn-success">Ajouter</button>
+				</form>
+
+
+			</div>
+		{% endblock %}
