--- a/templates/administration/ajout-locataire.html.twig
+++ b/templates/administration/ajout-locataire.html.twig
@@ -8,22 +8,54 @@
     .example-wrapper code { background: red; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1> ajout appartements</h1>
 
-    
-   
- 
 
-  <form method="post">
-    {{ form_row(form.nom) }}
-    {{ form_row(form.prenom) }}
-    {{ form_row(form.mail) }}
-    {{ form_row(form.tel) }}
-    {{ form_rest(form) }}
-    <button type="submit">Ajouter</button>
-</form>
-    
 
-</div>
+<div class="container">
+
+
+		<div class="card shadow-lg  mb-5 bg-body mt-5">
+			<div class="card-header">
+
+				<h1>
+					Ajout Locataire</h1>
+
+
+			</div>
+			<div class="card-body media align-items-center  row p-5">
+
+
+				<form method="post" class="mt-3 row  g-3">
+
+					<div class="col-6">
+						{{ form_label(form.nom) }}
+						{{ form_widget(form.nom, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.nom) }}
+
+					</div>
+
+					<div class="col-6">
+						{{ form_label(form.prenom) }}
+						{{ form_widget(form.prenom, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.prenom) }}</div>
+
+					<div class="col-6">{{ form_label(form.mail) }}
+						{{ form_widget(form.mail, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.mail) }}</div>
+
+					<div class="col-6">
+						{{ form_label(form.tel) }}
+						{{ form_widget(form.tel, {'attr': {'class': 'form-control'}}) }}
+						{{ form_errors(form.tel) }}</div>
+
+				
+
+
+					{{ form_rest(form) }}
+
+					<button type="submit" class="btn btn-success">Ajouter</button>
+				</form>
+
+
+			</div>
 {% endblock %}
