--- a/templates/administration/fiche-appartement.html.twig
+++ b/templates/administration/fiche-appartement.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Liste Locataires
+{% block title %}Fiche Appartement
 {% endblock %}
 
 {% block body %}
@@ -17,6 +17,210 @@
 		}
 	</style>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{# quittance #}
+								<div class="modal fade" id="reinitAppartement" tabindex="-1" aria-labelledby="quittanceLoyerLabel" aria-hidden="true">
+									<div class="modal-dialog modal-dialog-centered">
+										<div class="modal-content">
+											<div class="modal-header">
+												<h5 class="modal-title" id="reiniAppart">Vider l'Appartement</h5>
+												<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+											</div>
+											{% set sommeLoyer = 0 %}
+											{% set sommeDubis = 0 %}
+											{% set sommeDu = 0 %}
+
+
+											{% for pay in paiement %}
+												{% if pay.idLocataire == appartement.idStrLocataires  and pay.idAppartement == appartement.id %}
+													{% set sommeLoyer = sommeLoyer + pay.somme %}
+
+												{% endif %}
+											{% endfor %} 
+
+											{% if appartement.etat == 2 %}
+											
+												{% if etatDesLieuxS != null  %}
+													{% for etat in etatDesLieuxE %}
+
+
+
+															{% if etat.idLocataire == appartement.idStrLocataires and etat.quand == 'entree' and etat.idAppartement == appartement.id %}
+
+																{% set dateEntree = etat.date %}
+																{% set startDate = dateEntree %}
+																{% set dateTest = '2023-06-29' %}
+
+																{% set difference = date( dateTest|date() ).diff(date(startDate)) %}
+																{% set leftMonth = difference.m %}
+
+
+																{% set sommeDubis = appartement.loyer * leftMonth %}
+																{% set sommeDu = sommeDubis + sommeDu %}
+
+
+															{% endif %} 
+
+
+
+													{% endfor %} 
+
+							
+
+
+													{% set difference = sommeDu - sommeLoyer %}
+
+
+													id doit 	{{sommeDu}} <br>
+													
+																										le loyer est de 	{{sommeLoyer}}  <br>
+																										difference	{{difference}}
+
+
+													{% if difference > 0 %}
+														<div class="modal-body">
+															<p class="text-center">
+																<span class="bold">
+																	Le Locataire n'est pas a jours dans ses paiements. Veuillez régler ce problème avant de vider l'appartement
+																</span>
+															</p>
+														</div>
+
+														<div class="modal-footer">
+															<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+														</div> 
+
+													{% else %}
+
+														<form action="/reinit-appartement/{{appartement.id}}" class="p-3" method="POST">
+															<div class="modal-body row g-3 text-center">
+																<p class="bold"> Etes vous sur de vouloir vider l'appartement ?</p>
+															</div>
+															
+
+															<div class="modal-footer">
+																<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+																<button type="submit" class="btn btn-success" name="modifier_paiement" value="1">Valider</button>
+															</div> 
+														</form>
+													{% endif %}
+
+												{% else %}
+												<div class="modal-body row g-3 text-center">
+													<p class="bold">Un etat des lieux de sortie est nécéssaire avant de vider l'appartement</p>			
+												</div>
+												
+															<div class="modal-footer">
+																<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+															</div> 
+													
+												{% endif %}
+											{% else %}
+												<form action="/reinit-appartement/{{appartement.id}}" class="p-3" method="POST">
+															<div class="modal-body row g-3 text-center">
+																<p class="bold"> Voulez vous vraiment vider l'appartement ? </p> 
+																<p class="text-muted">L'appartement n'ayant pas un dossier valide, cela supprimera les etat des lieux et dépot de garantie en cours. </p>
+															</div>
+															
+
+															<div class="modal-footer">
+																<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+																<button type="submit" class="btn btn-success" name="modifier_paiement" value="1">Valider</button>
+															</div> 
+												</form>
+											{% endif %}
+
+										</div>
+									</div>
+								</div>
+
+
+								{# fin quittance #}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	
 
 	<div class="container">
@@ -26,7 +230,7 @@
 				Fiche Appartement
 			</h1>
 
-			<a href="/reinit-appartement/{{appartement.id}}">Vider l'appartement</a>
+			<a href="" class=" btn btn-danger" data-bs-toggle="modal" data-bs-target="#reinitAppartement">Vider l'appartement</a>
 
 
 		</div>
@@ -108,10 +312,10 @@
 									<i class="fas fa-circle-info"></i>
 								</a>
 
-
+{# 
 								<a href="/delete-locAppart/{{appartement.id}}">
 									<i class="fas fa-trash"></i>
-								</a>
+								</a> #}
 							</p>
 
 
